# Web-Agent-Interaction-Standard

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
demo_store/: app.py  cart.py  middleware.py  products.py
demo_store/static/: style.css
demo_store/templates/: base.html  cart.html  catalog.html  checkout.html
examples/: full_flow.py
mcp_server/: server.py
openspec/: config.yaml
openspec/changes/add-scope-verticals/: design.md  tasks.md
openspec/changes/add-scope-verticals/specs/scope-taxonomy/: spec.md
openspec/changes/archive/2026-03-18-add-scope-verticals/: proposal.md  tasks.md
openspec/changes/archive/2026-03-18-token-revocation-mechanism/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-18-token-revocation-mechanism/specs/pod-verification/: spec.md
openspec/changes/archive/2026-03-18-token-revocation-mechanism/specs/token-revocation/: spec.md
openspec/specs/confirmation-protocol/: spec.md
openspec/specs/pod-issuance/: spec.md
openspec/specs/pod-token/: spec.md
openspec/specs/pod-verification/: spec.md
openspec/specs/scope-taxonomy/: spec.md
openspec/specs/token-revocation/: spec.md
pod/: __init__.py  confirmation.py  issuer.py  revocation.py  scopes.py  token.py  verifier.py
pod_platform/: app.py  auth.py  keys.py  models.py
pod_platform/static/: style.css
pod_platform/templates/: base.html  create_token.html  dashboard.html  login.html
spec/: WAIS-Spec-Draft-v0.1.docx  WAIS-Spec-Draft-v0.1.md
tests/: conftest.py  test_confirmation.py  test_issuer.py  test_revocation.py  test_scope_reuse.py  test_scopes.py  test_token.py  test_verifier.py
