[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wais-pod"
version = "0.1.0"
description = "Open-source authentication protocol for AI agents acting on behalf of human users"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Deeger", email = "hello@deeger.io"},
]
keywords = ["ai", "agents", "authentication", "delegation", "identity", "wais"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "cryptography>=41.0.0",
]

[project.urls]
Homepage = "https://deeger.io"
Repository = "https://github.com/deegerhq/wais-pod"
Documentation = "https://deeger.io/wais"
Issues = "https://github.com/deegerhq/wais-pod/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]
platform = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "authlib>=1.3.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
    "python-multipart>=0.0.6",
]
store = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "itsdangerous>=2.1.0",
]
mcp = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["pod*", "pod_platform*", "demo_store*", "mcp_server*"]
